<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Projetmeteo</string>
    <string name="tri_par_pays">Tri par pays</string>
    <string name="tri_par_ville">Tri par ville</string>
    <string name="favoris">Favoris</string>
    <string name="ma_position">Ma position</string>
    <string name="accueil">Accueil</string>
    <string name="notes">Notes</string>
    <string name="no_notes_found_for_this_city">no_notes_found_for_this_city</string>
    <string name="enter_your_notes">enter_your_notes</string>
    <string name="home">home</string>
    <string name="new_note">new_note</string>
    <string name="enter_your_title">enter_your_title</string>
    <string name="back">back</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="entrer_la_note">Entrer la note</string>
    <string name="pas_de_note_pour_cette_ville">Pas de note pour cette ville</string>
    <string name="nouvelle_note">nouvelle note</string>
    <string name="titre">Titre</string>
    <string name="contenu">Contenu</string>
    <string name="supprimer">supprimer</string>
    <string name="sauvegarder">sauvegarder</string>
    <string name="Accueil">Accueill</string>
    <string name="acceuil">acceuil</string>
</resources>