<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".NotesEditActivity">

    <Space
        android:id="@+id/left_space"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <Space
        android:id="@+id/right_space"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <Space
        android:id="@+id/up_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHeight_percent="0.05" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:lines="1"
        android:hint="@string/titre"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/left_space"
        app:layout_constraintTop_toBottomOf="@id/up_space"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.9" />

    <EditText
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:hint="@string/contenu"
        android:textColor="@color/black"
        android:gravity="top"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/left_space"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/back"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1" />

    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/supprimer"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toLeftOf="@id/right_space"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1" />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sauvegarder"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/left_space"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>