<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:textSize="60sp"
        android:textColor="#333333"
        android:textAlignment="center"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/tri_par_pays"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/favorites"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:text="@string/tri_par_ville"
        android:textSize="13sp"
        app:layout_constraintLeft_toRightOf="@id/country"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/favorites"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:text="@string/favoris"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <Button
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/ma_position"
        android:textSize="13sp"
        app:layout_constraintLeft_toRightOf="@id/favorites"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>