<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".NotesActivity">

    <Space
        android:id="@+id/left_space"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <Space
        android:id="@+id/right_space"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.05" />

    <Space
        android:id="@+id/up_space"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHeight_percent="0.05" />

    <ListView
        android:id="@+id/notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:hint="@string/entrer_la_note"
        android:textColor="@color/black"
        android:gravity="top"
        app:layout_constraintLeft_toRightOf="@id/left_space"
        app:layout_constraintTop_toBottomOf="@id/up_space"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintWidth_percent="0.9" />

    <TextView
        android:id="@+id/textview_notes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pas_de_note_pour_cette_ville"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="200dp"
        app:layout_constraintLeft_toRightOf="@id/left_space"
        app:layout_constraintTop_toBottomOf="@id/up_space"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.9" />

    <Button
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/accueil"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/left_space"
        app:layout_constraintTop_toBottomOf="@id/notes"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1" />

    <Button
        android:id="@+id/new_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nouvelle_note"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toLeftOf="@id/right_space"
        app:layout_constraintTop_toBottomOf="@id/notes"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>